--- a/test-torus/index.html
+++ b/test-torus/index.html
@@ -6,6 +6,10 @@
   </head>
   <body>
     <script src='index.min.js'></script>
-    <script src="main.js"></script>
+
+    <!---script src='dist/torus.dev.js'></script>
+    <script src='dist/jdom.dev.js'></script---->
+      <script src="examples.js"></script>
+      <script src="main.js"></script>
   </body>
 </html>
